[gd_scene load_steps=3 format=3 uid="uid://d1xlbh3d24lbk"]

[ext_resource type="Texture2D" uid="uid://daqc88cjc262" path="res://UI/Inventory/empty_slot.png" id="1_bxyur"]
[ext_resource type="Script" uid="uid://bgvea8bxu53ij" path="res://Scripts/main_menu.gd" id="1_osatk"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_osatk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 100
text = "Cozy Wozy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_bxyur")
stretch_mode = 0

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_bxyur")
stretch_mode = 0

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("1_bxyur")
stretch_mode = 0

[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
